@@ -2,10 +2,10 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data, Graphics, Programming, Statistics, and
           Simulation
-Version: 0.96-9
-Date: 2013-12-06
+Version: 0.96-10
+Date: 2014-08-20
 Author: Martin Elff (with contributions by Christopher N. Lawrence, Dave Atkins, Jason W. Morgan, and Achim Zeileis)
-Maintainer: Martin Elff <martin.elff@uni-konstanz.de>
+Maintainer: Martin Elff <elff@gmx.com>
 Description: One of the aims of this package is to make life easier for
         useRs who deal with survey data sets. It provides an
         infrastructure for the management of survey data including
